--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+              <p>My name is Allison Darwin and I've lived in NC for almost 9 years now. I love that we have four seasons and are a not too far from the ocean and the mountains, two of my favorite places to be.</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p>I love learning and creating. Currently, I'm pursuing a career transition into blogging and tech. My blog will be related to my first love, personal finance. My journey in coding is starting in front-end development. I'm excited to see where it takes me.</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p>My hobbies include tennis and houseplants. It's a fun combination.</p>
             </div>
-        </section>    
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
