--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <header>
-          <h1> Hi. I'm Allison.</h1>
-        </header>
-        <main>
-          <p>I'm a <span>Responsive Designer &amp; Developer</span> who thrives on visual storytelling. When I'm not working, pursuing side projects, or getting lost in the rabbit hole of blogs &amp; books, I can be found traveling, hiking, and searching for new stories.</p>
-        </main>
-        <section class="wrapper">
-            <div class="div-1">
-              <p>I grew up in central Virginia, but have lived in North Carolina for almost 9 years now. I love that NC has all four seasons and that I can access both the beach and the mountains with a relatively short drive.</p>
+        <section class="flex-container">
+            <header>
+                <h1> Hi. I'm Allison.</h1>
+            </header>
+            <main>
+                <p>I'm a <span>Responsive Designer &amp; Developer</span> who thrives on visual storytelling. When I'm not working, pursuing side projects, or getting lost in the rabbit hole of blogs &amp; books, I can be found traveling, hiking, and searching for new stories.</p>
+            </main>
+            <div id="div-1" class="flex-items">
+                <p>I grew up in central Virginia, but have lived in North Carolina for almost 9 years now. I love that NC has all four seasons and that I can access both the beach and the mountains with a relatively short drive.</p>
             </div>
-            <div class="div-2">
+            <div id="div-2" class="flex-items">
                 <p>I love learning and creating. Currently, I'm pursuing a career transition into blogging and tech. My blog will be related to my first love, personal finance. My journey in tech is starting with front-end development. I'm excited to see where it takes me!</p>
             </div>
-            <div class="div-3">
+            <div id="div-3" class="flex-items">
                 <p>My hobbies include tennis and houseplants. It's a thrilling combination.</p>
             </div>
+            <footer>
+                <ul>
+                    <li><a href="https://twitter.com/allisonpdarwin" target="_blank"><img src="img/twitter.png" alt="twitter-icon"</a></li>
+                    <li><a href="https://github.com/allisondarwin" target="_blank"><img src="img/github.png" alt="github-icon"</a></li>
+                    <li><a href="https://www.linkedin.com/in/allisondarwin/" target="_blank"><img src="img/linkedin.png" alt="linkedin-icon"</a></li>
+                </ul>
+            </footer>
         </section>
-        <footer>
-          <ul>
-            <li><a href="https://twitter.com/allisonpdarwin" target="_blank"><img src="img/twitter.png" alt="twitter-icon"</a></li>
-            <li><a href="https://github.com/allisondarwin" target="_blank"><img src="img/github.png" alt="github-icon"</a></li>
-            <li><a href="https://www.linkedin.com/in/allisondarwin/" target="_blank"><img src="img/linkedin.png" alt="linkedin-icon"</a></li>
-          </ul>
-        </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
